--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 </div>
             </div> <!-- end s-footer__contact-content -->
 
-            <div class="row s-footer__bottom">
+            <!-- <div class="row s-footer__bottom">
                 <div class="column ss-copyright">
                     <span>© Copyright Augustine 2022</span> 
                     <span>Design by <a href="https://www.styleshout.com/">StyleShout</a></span>
@@ -412,7 +412,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M6 4h12v2H6zm5 10v6h2v-6h5l-6-6-6 6z"></path></svg>
                     </a>
                 </div>
-            </div> <!-- end s-footer__bottom-->
+            </div> end s-footer__bottom -->
 
         </footer> <!-- end s-footer -->
 
